solved touch on mobile issue

--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -119,18 +119,12 @@ a img {
 }
 
 .gallery {
-    margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(auto-fit, 200px);
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-gap: 1.5rem;
     align-self: center;
     justify-self: center;
     padding: 1.5rem;
-}
-
-.gallery-item {
-    max-width: 200px;
-    max-height: 200px;
 }
 
 .gallery-img {
@@ -138,6 +132,7 @@ a img {
     width: 100%;
     height: 100%;
     opacity: 0.7;
+    object-fit: cover;
 }
 
 .gallery-img:hover {
